concluido o html e css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 
  <!-- Nosso CSS -->
    <link rel="stylesheet" href="/assets/css/global.css">
+   <link rel="stylesheet" href="/assets/css/pokedex.css">
 
 </head>
 <body>
 
    <section class="content">
       <h1>Pokedex</h1>
-      <ol class="Pokemons">
+
+      <ol class="pokemons">
          <li class="pokemon">
             <span class="number">#001</span>
             <span class="name">Bulbasaour</span>
@@ -36,7 +38,9 @@
             </div>
          </li>
       </ol>
+      
    </section>
+   
 
 
       <!-- Nosso JS -->
